<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
<!--        <item-->
<!--            android:id="@+id/nav_home"-->
<!--            android:icon="@drawable/ic_menu_camera"-->
<!--            android:title="@string/menu_home" />-->
<!--        <item-->
<!--            android:id="@+id/nav_gallery"-->
<!--            android:icon="@drawable/ic_menu_gallery"-->
<!--            android:title="@string/menu_gallery" />-->
<!--        <item-->
<!--            android:id="@+id/nav_slideshow"-->
<!--            android:icon="@drawable/ic_menu_slideshow"-->
<!--            android:title="@string/menu_slideshow" />-->
        <item
            android:id="@+id/nav_meditation"
            android:icon="@drawable/ic_baseline_notifications_off_24"
            android:title="@string/menu_meditation" />
        <item
            android:id="@+id/nav_mandala"
            android:icon="@drawable/ic_baseline_brush_24"
            android:title="@string/menu_mandala" />
        <item
            android:id="@+id/nav_podcast"
            android:icon="@drawable/ic_baseline_mic_24"
            android:title="@string/menu_podcast" />
    </group>
</menu>